--- a/EOSWrapper.uplugin
+++ b/EOSWrapper.uplugin
@@ -29,6 +29,10 @@
     {
       "Name": "OnlineSubsystem",
       "Enabled": true
+    },
+    {
+      "Name": "OnlineSubsystemUtils",
+      "Enabled": true
     }
   ]
 }
